ft_containers-unit-test/logs.txt
In file included from ../vector_tests/rend().cpp:2:
In file included from ../vector_tests/__service.ipp:3:
In file included from ../vector_tests/../../../vector.hpp:19:
../vector_tests/../../../iterator.hpp:230:78: error: no type named 'iterator_category' in 'ft::iterator_traits<int *>'
class reverse_iterator : public iterator<typename iterator_traits<Iterator>::iterator_category,
                                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
../vector_tests/rend().cpp:20:26: note: in instantiation of template class 'ft::reverse_iterator<int *>' requested here
    v.push_back(*(vector.rend() - 1));
                         ^
../vector_tests/rend().cpp:28:57: note: in instantiation of function template specialization 'rend_test<int>' requested here
    exit(run_vector_unit_test<int>("rend()", rend_test, rend_test));
                                                        ^
../vector_tests/rend().cpp:21:33: error: invalid operands to binary expression ('ft::vector<int, std::__1::allocator<int> >::reverse_iterator' (aka 'reverse_iterator<int *>') and 'int')
    v.push_back(*(vector.rend() - 2));
                  ~~~~~~~~~~~~~ ^ ~
../vector_tests/rend().cpp:28:57: note: in instantiation of function template specialization 'rend_test<int>' requested here
    exit(run_vector_unit_test<int>("rend()", rend_test, rend_test));
                                                        ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:770:1: note: candidate template ignored: could not match 'std::__1::reverse_iterator' against 'ft::reverse_iterator'
operator-(const reverse_iterator<_Iter1>& __x, const reverse_iterator<_Iter2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1211:1: note: candidate template ignored: could not match 'move_iterator' against 'reverse_iterator'
operator-(const move_iterator<_Iter1>& __x, const move_iterator<_Iter2>& __y)
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/iterator:1623:1: note: candidate template ignored: could not match '__wrap_iter' against 'reverse_iterator'
operator-(const __wrap_iter<_Iter1>& __x, const __wrap_iter<_Iter2>& __y) _NOEXCEPT_DEBUG
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/string:559:11: note: candidate template ignored: could not match 'fpos' against 'reverse_iterator'
streamoff operator-(const fpos<_StateT>& __x, const fpos<_StateT>& __y)
          ^
In file included from ../vector_tests/rend().cpp:2:
In file included from ../vector_tests/__service.ipp:3:
../vector_tests/../../../vector.hpp:282:28: error: expression is not assignable
                return (reverse_iterator(--(begin())));
                                         ^ ~~~~~~~~~
../vector_tests/rend().cpp:20:26: note: in instantiation of member function 'ft::vector<int, std::__1::allocator<int> >::rend' requested here
    v.push_back(*(vector.rend() - 1));
                         ^
../vector_tests/rend().cpp:28:57: note: in instantiation of function template specialization 'rend_test<int>' requested here
    exit(run_vector_unit_test<int>("rend()", rend_test, rend_test));
                                                        ^
3 errors generated.
